# ts-24-05-django

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
django_ts/: asgi.py  settings.py  urls.py  wsgi.py
