[tool.poetry]
name = "ts-24-05-django"
version = "0.1.0"
description = ""
authors = ["Eduardo Ferreira <eduardo.ferreira@olist.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
Django = "^3.2.3"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
